--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <label for="enter-text">Enter Text</label>
       <textarea id="enter-text"></textarea>
   </div>
-  <div id="headline-display"></div>
+  <div id="headline-display">
+      <h1 id="display"></h1>
+  </div>
   <div id="data-output"></div>
 </body>
 </html>
