--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       <h1>Luis Ventura</h1>
       <p>My favorite color is Royal Blue and I wear DC!</p>
   </div>
+
+
   <div id="data-input">
       <h1>Font Styler</h1>
       <label for="input-size">Font Size</label>
@@ -26,9 +28,19 @@
       <label for="enter-text">Enter Text</label>
       <textarea id="enter-text"></textarea>
   </div>
+
+
   <div id="headline-display">
       <h1 id="display"></h1>
+      <pre><code>.headlines {
+        font-size: <span id="show-size">16</span>px;
+        font-family: <span id="show-font">Times</span>;
+        color: <span id="show-color">#000</span>;
+        background-color: <span id="show-bg-color">#fff</span>;
+      }</code></pre>
   </div>
+
+  
   <div id="data-output"></div>
 </body>
 </html>
