--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <input id="input-size" type="number">
       <label for="select-font">Font Family</label>
       <select id="select-font">
-          <option label="Helvetic">Helvetic</option>
+          <option label="Helvetica">Helvetica</option>
           <option label="Arial">Arial</option>
           <option label="Times New Roman">Times New Roman</option>
           <option label="Georgia">Georgia</option>
