--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <input id="input-size" type="number" value="16">
         <label for="select-font">Font Family</label>
         <select id="select-font">
+            <option label="Times New Roman">Times New Roman</option>
             <option label="Helvetica">Helvetica</option>
             <option label="Arial">Arial</option>
-            <option label="Times New Roman">Times New Roman</option>
             <option label="Georgia">Georgia</option>
         </select>
         <label for="input-color">Font Color</label>
@@ -36,8 +36,8 @@
     <div id="headline-display">
         <h1 id="display">Sample Text</h1>
         <pre><code>.headlines {
-          font-size: <span id="show-size">16</span>px;
-          font-family: <span id="show-font">Times</span>;
+          font-size: <span id="show-size">16</span> px;
+          font-family: <span id="show-font">Times New Roman</span>;
           color: <span id="show-color">#000</span>;
           background-color: <span id="show-bg-color">#fff</span>;
         }</code></pre>
@@ -45,5 +45,6 @@
   </div>
     
     <div id="data-output"></div>
+    <script src="script.js"></script>
 </body>
 </html>
