--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <option label="Arial">Arial</option>
             <option label="Georgia">Georgia</option>
         </select>
-        <label for="input-color">Font Color</label>
+        <label for="input-color">Font and Border Color</label>
         <input id="input-color" type="color" value="#000">
         <label for="input-bg-color">Background Color</label>
         <input id="input-bg-color" type="color" value= "#fff">
